    call on a return to a previously-seen item.

plugin.py
    Move the text translaton call into a stand-alone DO_translation()
    function so that it may be called from anywhere.

plugin.py
    Add code to intercept EventView pop-ups and add translations there
    toggled by the Text key.

========== 2.01-rc1 [11 Jan 2021]


AutoflushCache.py
    Added code to handle cacheing the translations. In its own class.

Skin_medium.py, Skin_small.py
    (Re)added the label2 item for the Read, clear-cache button

plugin.py
    Change the User-Agent string to be "EPG Translator" based.
    Remember all events, not just a (configurable) number.
    Re-ordered some code.
    Added cacheing of translated text.
    Add configurable cacheing timeout.
    Add red-button handling to clear cache.
    Add handling of translations for EventView items using the Text
    button as a toggle.
    Removed My_EPGSel* functions.

*-2.01-rc1.ipk
    Built....

========== 2.01-rc2 [13 Jan 2021]

Skin_medium.py
Skin_small.py
    Enlarged the translatorConfig screen.
    Added the (forgotten) yellow image back to translatorMain.

plugin.py
    Add lang_flag() function, just to have only one place that knows how
    to form the pathnames.
    Don't add ch+/ (or rather "nextBouquet" and "prevBouquet") button
    bindings if we are viewing a recording, not </>.
    Use a ServiceEventTracker to call getEPG on service (channel)
    changes rather than doing this in zapUp/zapDown..  This means we
    don't try until the new channel is actually tuned it, and so works
    even when a timeshift is running (the user may be prompted before
    anything happens).
    Handle viewing a playback of a recording by creating a hand-crafted
    EPG with one entry.

README
    Update the release README to add more detail.

*-2.01-rc2.ipk
    Built 2.01-rc2.ipk.  2.01-rc1.ipk removed.

========== 2.01-rc3

Skin_medium.py
Skin_small.py
    Fixed some minor separator geometry issues.